2005-06-05  Pawel Salek

	* libbalsa/mailbox_imap.c: Peter found one more fault in imap scanning.
	* NEWS, configure.in: release 2.3.3

2005-06-04  Pawel Salek

	* balsa.spec.in: extend list of dependencies.
	* libbalsa/folder-scanners.c: flags are passed by value.
	* libbalsa/imap/auth-gssapi.c: continue authentication on invalid key.
	* libbalsa/imap/imap-handle.c: pass flags by value - address was
	truncated by the marshaller on 64-bit machines.

2005-06-01 20:54  PeterB

	* libbalsa/message.c: lock a GMimeStream.

2005-05-28 23:12  PeterB

	* libbalsa/libbalsa.c: look for /var/mail/$USER before
	/var/spool/mail/$USER: fixes bug 305659.
	* src/mailbox-node.c: make popup menu more appropriate: fixes
	bug 305668.

2005-05-26 16:13  PeterB

	* src/ab-main.c: make radio list work; set window title to be
	address book name.
	* libbalsa/source-viewer.c: lock a GMimeStream.

2005-05-24 09:09  PeterB

	* libbalsa/gmime-part-rfc2440.c: lock a GMimeStream.

2005-05-24 Albrecht Dreß <albrecht dot dress at arcor dot de>

	* libbalsa/gmime-gpgme-signature.c: fix the signature verification
	output.
	* src/balsa-message.c: check the result of
	libbalsa_mailbox_get_message_part().
	* balsa.spec.in: clean up and fedora extras adaptation.

2005-05-23 19:36  PeterB

	* configure.in, libbalsa/address-book-gpe.c,
	libbalsa/address-book-gpe.h, src/address-book-config.c: support
	SQLite Version 3--fixes bug 305152.
	* libbalsa/libbalsa-conf.c: compile on systems where gsize !=
	guint.

2005-05-22 17:11  PeterB

	* libbalsa/: Makefile.am, body.c, gmime-part-rfc2440.c, html.c,
	mailbox_imap.c, mailbox_maildir.c, mailbox_mbox.c, mailbox_mh.c,
	message.c, mime-stream-shared.c, mime-stream-shared.h, rfc3156.c,
	send.c: implement LibBalsaMimeStreamShared, a subclass of
	GMimeStreamFs with a lock; use it in LibBalsaMailboxMbox in place
	of the fine-grained mailbox lock.

2005-05-21  Pawel Salek

	* libbalsa/mailbox_imap.c: get properly signed parts.