@@ -149,14 +149,14 @@ libbalsa_guess_email_address(void)
     /* Q: Find this location with configure? or at run-time? */
     static const gchar* MAILNAME_FILE = "/etc/mailname";
     char hostbuf[512];
+    FILE *mailname_in;
 
     gchar* preset, *domain;
     if(g_getenv("EMAIL") != NULL){                  /* 1. */
         preset = g_strdup(g_getenv("EMAIL"));
-    } else if(access(MAILNAME_FILE, F_OK) == 0){    /* 2. */
-        FILE *mailname_in = fopen(MAILNAME_FILE, "r");
-        fgets(hostbuf, 511, mailname_in);
-        hostbuf[strlen(hostbuf)-1] = '\0';
+    } else if( (mailname_in = fopen(MAILNAME_FILE, "r")) != NULL){ /* 2. */
+        fgets(hostbuf, sizeof(hostbuf)-1, mailname_in);
+        hostbuf[sizeof(hostbuf)-1] = '\0';
         fclose(mailname_in);
         preset = g_strconcat(g_get_user_name(), "@", hostbuf, NULL);
         
